--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server",
-    "postinstall": "npx prisma generate"
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
